# 2022-2023-project-3-harfang3d-binding-Project-3-group

./: .gitignore  2022-2023-project-3-harfang3d-binding-Project-3-group.cpp  2022-2023-project-3-harfang3d-binding-Project-3-group.fsproj  CMakeLists.txt  calculate_sum.c  calculate_sum.h  main.fs  readme.md  test.fs  testExample.cpp  vector.fs  vector_test.h
Documents/Functional-Specifications/: PRD.md  functional.md
Documents/Meetings report/: Meeting-report.md
Documents/Qualitty-Assurance/: TestPlan.md
Documents/Quality-Assurance/: Database-of-Bugs  Database-of-Bugs.md  TestPlan.md
Documents/Research/: Data-organization-Harfang.md  Product.md  Starting-point  Starting-point.md  client.md
Documents/Technical-Specifications/: technical-Specification.md
FABGen-master/: bind.py  gen.py  tests.py
FABGen-master/lang/: fsharp.py
FABGen-master/lib/: __init__.py  stl.py
FABGen-master/tests/: arg_out.py  basic_type_exchange.py  cpp_exceptions.py  enumeration.py  extern_type.py  function_call.py  function_template_call.py  method_route_feature.py  repr.py  return_nullptr_as_none.py  shared_ptr.py  shared_ptr_default_comparison.py  std_function.py  std_future.py  std_vector.py  struct_bitfield_member_access.py  struct_default_comparison.py  struct_exchange.py  struct_inheritance.py  struct_inheritance_cast.py  struct_instantiation.py  struct_nesting.py  (+7 more)
Test/: testVector.fs
TestLyb/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
VectorExample/: 2022-2023-project-3-harfang3d-binding-Project-3-group.fsproj  main.fs  vector.fs
vector/: vector3.h
(+13 files in other folders)
